apps/caddy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caddy
  template:
    metadata:
      labels:
        app: caddy
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: caddy-data-claim
      - name: caddyfile
        configMap:
          name: caddyfile
      securityContext:
        runAsUser: 4146
        runAsGroup: 4146
      containers:
      - name: app
        image: caddy:2@sha256:3422ce6de165df66534f9b9ba50efaf457114ec961763cc52f5dbdaac2972d73
        ports:
        - containerPort: 80
        startupProbe:
          httpGet:
            path: /healthz
            port: 1234
          failureThreshold: 12  # 12 * 5s = 1 minute startup leeway
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 1234
          periodSeconds: 60
        volumeMounts:
        - name: data
          mountPath: /config
          subPath: config
        - name: data
          mountPath: /data
          subPath: data
        - name: data
          mountPath: /srv/sites
          subPath: sites
          readOnly: true
        - name: caddyfile
          mountPath: /etc/caddy
          readOnly: true
