apps/caddy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy-web
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: caddy
  ports:
  - port: 80
    targetPort: 80
